Release v1.0.0 - industry-grade overhaul (#100)
Co-authored-by: I561603 <mahiuddin.al.kamal@sap.com>